--- a/wiki/XmlEntoVector.wiki
+++ b/wiki/XmlEntoVector.wiki
@@ -22,8 +22,6 @@ Each anopheles elements has the following sub-elements: either `EIR` or `monthly
 
 EIR can be specified either via 5 Fourier coefficients and a rotation factor (`EIR` element) or via 12 monthly values plus an annual level (`monthlyEIR` element). Exactly one of these elements must appear.
 
-This method leads to an approximation to the seasonal pattern of annual EIR described in detail [EIRSeasonDynamic here]
-
 ==== EIR via Fourier coefficients ====
 
 This is the older method (the only available method before schema version 22).
@@ -86,6 +84,8 @@ The `monthlyEIR` element requires one attribute: `annualEIR`, specifying the tot
           <item>1</item>
         </monthlyEIR>
 }}}
+
+These methods lead to approximations to the seasonal pattern of annual EIR described in detail [EIRSeasonDynamic here]
 
 === Mosquito lifecycle and human-interaction parameters ===
 
