--- a/wiki/ModelClinical.wiki
+++ b/wiki/ModelClinical.wiki
@@ -17,7 +17,22 @@ Due to confusion of terms while adapting the clinical model for a one-day timest
 
 This was designed for the 1-day time-step model, but should be equally applicable to other models and may in the future be used for monitoring outputs like the number of patent hosts (`nPatent`).
 
-TODO: add documentation of model
+As part of the case management model, we need to simulate outcomes of parasitological tests, both rapid diagnostic tests (RDTs) and microscopy. These outcomes are known to depend on parasite density of the individual being tested(World Health Organization et al., 2005; Kilian et al., 2000). To model this, we looked for a function to relate parasite densities to the probability of a positive outcome.
+
+Source data  We used the data in Table 4 in Murray et al(Murray et al., 2008)  to model the outcome of RDTs for Plasmodium falciparum. This table shows the percent sensitivity (and the 95% confidence interval) found for the RDT BinaxNOW Malaria in a rigorous field trial, at different levels of parasitaemia. This assay is based on detection of the antigens HRP-2 for P. falciparum and aldolase for generic Plasmodium.  We associate the sensitivities listed for P. falciparum with the mid-points of the parasite density ranges listed, and one minus the specificity for a density of 0 parasites.
+
+To model microscopy, we assume the data shown in Table 1. This is sourced from expert opinion (Allan Schapira), backed by the observation that microscopy diagnostic errors are noted more commonly for low-density parasitemias of 10 to 100 parasites/L(Kilian et al., 2000).
+
+Model We found a sigmoidal function a good match for this data. Note that since the probability of obtaining a positive outcome when testing a sample with no parasites is non-zero, we need to scale the sigmoidal. With a parasite density of Y, probability of a positive outcome with zero parasites α, and parameter β, this gives us the probability of a positive test outcome as a function of parasite density:
+
+and thus the diagnostic test’s output can be modelled as  .
+
+Parameters We use the parameters in Table 2 to model RDT and microscopy diagnostics.Table 2:
+
+
+Evaluation For the Plasmodium falciparum data, plotting our predictions for the probability of a positive outcome by RDT against the source data shows that our model predictions are in good agreement with the source on which they are based (Figure 1). 
+
+Figure 1:
 
 == Five-day timestep ==
 
