Edited wiki page UtilsRunScripts through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@2040 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/UtilsRunScripts.wiki
+++ b/wiki/UtilsRunScripts.wiki
@@ -103,9 +103,10 @@ This functions similarly to compareOutput.py but reads the ctsout.txt files. It 
 
 Code: [http://code.google.com/p/openmalaria/source/browse/trunk/util/plotResult.py util/plotResult.py]
 
-This is a script designed to produce rapid visualisations of output.txt files. An example (normally labels are added, but on a small plot like this they hide the graphs):
+This is a script designed to produce rapid visualisations of output.txt files. A couple of examples:
 
-http://openmalaria.googlecode.com/svn/wiki/graphs/plotResults-example1.png`
+http://openmalaria.googlecode.com/svn/wiki/graphs/plotResults-example1.png
+
 http://openmalaria.googlecode.com/svn/wiki/graphs/plotResults-example2.png
 
 Options:
