--- a/wiki/EIRSeasonDynamic.wiki
+++ b/wiki/EIRSeasonDynamic.wiki
@@ -17,6 +17,8 @@ The table contains suggestions for what might be the approximate lag periods bet
 || Incidence of clinical malaria || -15 ||
 || Incidence of severe malaria || -20 ||
 
+== Ways of specifying seasonality in EIR ==
+
 EIR can be specified either via 5 Fourier coefficients and a rotation factor (`EIR` element) or via 12 monthly values plus an annual level (`monthlyEIR` element). Exactly one of these elements must appear.
 
 ==== EIR via Fourier coefficients ====
