--- a/wiki/ModelClinical.wiki
+++ b/wiki/ModelClinical.wiki
@@ -19,9 +19,9 @@ This was designed for the 1-day time-step model, but should be equally applicabl
 
 As part of the case management model, we need to simulate outcomes of parasitological tests, both rapid diagnostic tests (RDTs) and microscopy. These outcomes are known to depend on parasite density of the individual being tested([http://www.wpro.who.int/sites/rdt/whatis/action.htm], [http://www.ncbi.nlm.nih.gov/pubmed/10672199 Kilian et al, 2000]). To model this, we looked for a function to relate parasite densities to the probability of a positive outcome.
 
-*Source data*  We used the data in Table 4 in [http://www.ncbi.nlm.nih.gov/pubmed/18202438 Murray et al, 2008] to model the outcome of RDTs for Plasmodium falciparum. This table shows the percent sensitivity (and the 95% confidence interval) found for the RDT BinaxNOW Malaria in a rigorous field trial, at different levels of parasitaemia. This assay is based on detection of the antigens HRP-2 for P. falciparum and aldolase for generic Plasmodium.  We associate the sensitivities listed for P. falciparum with the mid-points of the parasite density ranges listed, and one minus the specificity for a density of 0 parasites.
+*Source data*  We used the data in Table 4 in [http://www.ncbi.nlm.nih.gov/pubmed/18202438 Murray et al, 2008] to model the outcome of RDTs for <i>Plasmodium falciparum</i>. This table shows the percent sensitivity (and the 95% confidence interval) found for the RDT BinaxNOW Malaria in a rigorous field trial, at different levels of parasitaemia. This assay is based on detection of the antigens HRP-2 for <i>P. falciparum</i> and aldolase for generic <i>Plasmodium</i>.  We associate the sensitivities listed for <i>P. falciparum</i> with the mid-points of the parasite density ranges listed, and one minus the specificity for a density of 0 parasites.
 
-To model microscopy, we assume the data shown in Table 1. This is sourced from expert opinion (Allan Schapira), backed by the observation that microscopy diagnostic errors are noted more commonly for low-density parasitemias of 10 to 100 parasites/L([http://www.ncbi.nlm.nih.gov/pubmed/10672199 Kilian et al, 2000]).
+To model microscopy, we assume the data shown in Table 1. This is sourced from expert opinion (Allan Schapira), backed by the observation that microscopy diagnostic errors are noted more commonly for low-density parasitemias of 10 to 100 parasites/µL([http://www.ncbi.nlm.nih.gov/pubmed/10672199 Kilian et al, 2000]).
 
 Table 1:
 
@@ -32,7 +32,7 @@ Table 1:
 
 *Model* We found a sigmoidal function a good match for this data. Note that since the probability of obtaining a positive outcome when testing a sample with no parasites is non-zero, we need to scale the sigmoidal. With a parasite density of Y, probability of a positive outcome with zero parasites α, and parameter β, this gives us the probability of a positive test outcome as a function of parasite density:
 
-f(Y)=(1-alpha) + alpha x Y/(Y+beta)
+f(Y)=(1-α) + α * Y/(Y+β)
 
 and thus the diagnostic test’s output can be modelled as Bernoulli (f(Y)).
 
@@ -43,8 +43,8 @@ Table 2:
 
 || *Parameter*|| *Description*|| *RDT*|| *Microscopy*|| 
 			
-|| alpha||specificity||0.942|| 0.75|| 
-|| beta||density at which sensitivity is half given alpha=1|| 50||
+|| α||specificity||0.942|| 0.75|| 
+|| β||density at which sensitivity is half given α=1|| 50||
 
 
 *Evaluation* For the <i>Plasmodium falciparum data</i>, plotting our predictions for the probability of a positive outcome by RDT against the source data shows that our model predictions are in good agreement with the source on which they are based (Figure 1). 
