--- a/wiki/ExperimentDesign.wiki
+++ b/wiki/ExperimentDesign.wiki
@@ -14,7 +14,7 @@ The OpenMalaria simulator is designed for simulating individual scenarios. To si
   <dt>Full factorial design</dt>
   <dd>A *full factorial* experiment is one where all possible scenarios are generated: all combinations of one arm per sweep are used.</dd>
   <dt>Seed</dt>
-  <dd>Each time a scenario is simulated, the (psuedo-)random number generator must be started from some *seed* (generally a positive integer); using a different seed will affect the generation of each pseudo-random number and correspondingly may alter the outcome of stochastic decisions. Additionally, in saying that an experiment was run with 5 *seeds*, we mean that each scenario was run 5 times, each time with a different seed.</dd>
+  <dd>Each time a scenario is simulated, the (pseudo-)random number generator must be started from some *seed* (generally a positive integer); using a different seed will affect the generation of each pseudo-random number and correspondingly may alter the outcome of stochastic decisions. Additionally, in saying that an experiment was run with 5 *seeds*, we mean that each scenario was run 5 times, each time with a different seed.</dd>
 </dl>
 
 == Models and seeds ==
