Edited wiki page TableOfContents through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@2065 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -42,6 +42,7 @@
       * [ModelIntervMisc Special interventions]
       * [ModelDecayFunctions Decay of intervention effects]
   * *Code development*
+    * [Changelog]
     * [Code#Source_code Source code]
       * [Code#Doxygen_documentation doxygen-generated documentation]
     * [BuildSystem Building and Testing]
