--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -13,6 +13,9 @@ Yet to be released. Planned changes:
   * `mode` parameter of `<entomology>` element now takes keyword value: `dynamic` or `forced`.
   * Vector model XML parameters now largely use elements instead of being one long string of attributes.
   * Vector parameters `α_i`, `P_B_i`, `P_C_i` and `P_D_i` (rate of encountering hosts and probabilities of biting, escaping and resting respectively) may now vary across humans to simulate human heterogeneity.
+  * NC has extended the vector model with simulation of the egg, larval and pupal life-stages.
+  * A larviciding using the vector life-cycle model will be included.
+  * *Vector-model inputs will be changed:* transmission input will be in the form of a seasonality profile and IBPAPA (infectious bites per adult per annum), where the seasonality profile can be that of transmission (as before) or that of vector densities. Fitting of internal parameters to reproduce this seasonality _should_ be better than before (in progress).
 
 
 == Schema Version 29 ==
